# alpha-lab

./: .gitignore  README.md
.claude/: CLAUDE.md
backend/: README.md  pyproject.toml
backend/scripts/: backfill_industry.py  compute_scores.py  daily_collect.py  smoke_mops.py  smoke_mops_events.py  smoke_mops_financials.py  smoke_twse.py  smoke_twse_institutional.py  smoke_twse_margin.py  smoke_yahoo.py
backend/src/alpha_lab/: config.py
backend/tests/analysis/: test_factor_dividend.py  test_factor_growth.py  test_factor_quality.py  test_factor_value.py  test_indicators.py  test_normalize.py  test_pipeline.py  test_portfolio.py  test_ratios.py  test_reasons.py  test_weights.py
backend/tests/api/: conftest.py  test_education.py  test_glossary.py  test_health.py  test_jobs.py  test_portfolios_recommend.py  test_portfolios_saved.py  test_reports.py  test_screener.py  test_stocks_list.py  test_stocks_overview.py  test_stocks_score.py  test_stocks_sections.py
backend/tests/briefing/: test_daily.py  test_sections.py
backend/tests/collectors/: test_fallback.py  test_mops.py  test_mops_cashflow.py  test_mops_cashflow_upsert.py  test_mops_events.py  test_mops_financials.py  test_runner_events.py  test_runner_financials.py  test_runner_institutional.py  test_runner_margin.py  test_runner_prices.py  test_runner_source.py  test_stock_info_upsert.py  test_twse.py  test_twse_common.py  test_twse_institutional.py  test_twse_margin.py  test_twse_stock_info.py  test_yahoo.py
backend/tests/education/: test_loader.py
backend/tests/fixtures/: mops_t164sb05_2330_2026Q1.html  (+1 more)
(+296 files in other folders)
